<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lsm6</name>
    <version>0.0.1</version>
    <description>LSM6 I2C IMU driver</description>
    <maintainer email="cheers.conroy@gmail.com">Conroy Cheers</maintainer>
    <license>None</license>
    <author>Conroy Cheers</author>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
