<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>wheelie_serial</name>
    <version>0.0.1</version>
    <description>Serial communications node for wheeliebot</description>
    <maintainer email="cheers.conroy@gmail.com">Conroy Cheers</maintainer>
    <license>None</license>
    <author>Conroy Cheers</author>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
