<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>wheeliebot</name>
    <version>0.0.1</version>
    <description>wheeliebot metapackage</description>
    <maintainer email="cheers.conroy@gmail.com">Conroy Cheers</maintainer>
    <license>None</license>
    <author>Conroy Cheers</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>cone_detector</exec_depend>
    <exec_depend>wheelie_serial</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
