<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>wheeliebot</name>
    <version>0.0.1</version>
    <description>Main wheeliebot package</description>
    <maintainer email="cheers.conroy@gmail.com">Conroy Cheers</maintainer>
    <license>None</license>
    <author>Conroy Cheers</author>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>wheeliebot_msgs</exec_depend>
    <exec_depend>wheelie_serial</exec_depend>
    <exec_depend>cone_detector</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
